records, validering +eksempler på engangsstønad termin, fødsel med uutland